Added vim fswitch to vim plugins in setup, and hopefully fixed terminator prefs to not open layout switcher with alt-l

--- a/terminator/config
+++ b/terminator/config
@@ -6,6 +6,7 @@
   go_left = <Alt>h
   go_right = <Alt>l
   go_up = <Alt>k
+  layout_launcher = <Primary><Shift>l
 [layouts]
   [[default]]
     [[[child1]]]
