replacing biber sort stuff with bibtool until I can update texlive to the present day

--- a/bib-cleanup.conf
+++ b/bib-cleanup.conf
@@ -1,8 +1,7 @@
-<!-- Based on arprice's tex.stackexchange solution here:
-https://tex.stackexchange.com/questions/299641/how-to-sort-entries-in-a-bib-file-with-biber/421758#421758
--->
-
+<?xml version="1.0" encoding="UTF-8"?>
 <config>
+  <output_align>true</output_align>
+  <output_fieldcase>lower</output_fieldcase>
   <sortingtemplate name="tool">
     <sort order="1">
       <sortitem order="1">author</sortitem>
@@ -14,28 +13,4 @@ https://tex.stackexchange.com/questions/299641/how-to-sort-entries-in-a-bib-file
       <sortitem order="1">title</sortitem>
     </sort>
   </sortingtemplate>
-  <sourcemap>
-    <maps datatype="bibtex" map_overwrite="1">
-        <map>
-            <map_step map_field_set="ABSTRACT" map_null="1"/>
-            <map_step map_field_set="abstract" map_null="1"/>
-            <map_step map_field_set="Abstract" map_null="1"/>
-            <map_step map_field_set="FILE" map_null="1"/>
-            <map_step map_field_set="file" map_null="1"/>
-            <map_step map_field_set="File" map_null="1"/>
-            <map_step map_field_set="KEYWORDS" map_null="1"/>
-            <map_step map_field_set="keywords" map_null="1"/>
-            <map_step map_field_set="Keywords" map_null="1"/>
-            <map_step map_field_set="SHORTTITLE" map_null="1"/>
-            <map_step map_field_set="shorttitle" map_null="1"/>
-            <map_step map_field_set="Shorttitle" map_null="1"/>
-        </map>
-        <map>
-            <per_type>ARTICLE</per_type>
-            <per_type>BOOK</per_type>
-            <per_type>inproceedings</per_type>
-            <per_type>incollection</per_type>
-        </map>    
-    </maps>
-  </sourcemap>  
 </config>
