update bibclean for biber 2018 (still not sorting right), install ntp

--- a/bib-cleanup.conf
+++ b/bib-cleanup.conf
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <config>
-  <output_align>true</output_align>
-  <output_fieldcase>lower</output_fieldcase>
   <sortingtemplate name="tool">
     <sort order="1">
       <sortitem order="1">author</sortitem>
@@ -13,4 +11,15 @@
       <sortitem order="1">title</sortitem>
     </sort>
   </sortingtemplate>
+  <output_align>true</output_align>
+  <output_fieldcase>lower</output_fieldcase>
+  <sourcemap>
+    <maps datatype="bibtex" map_overwrite="1">
+      <map>
+        <map_step map_field_set="file" map_null="1"/>
+        <map_step map_field_set="keywords" map_null="1"/>
+        <map_step map_field_set="mendeley-tags" map_null="1"/>
+      </map>
+    </maps>
+  </sourcemap>
 </config>
